fixup! fixup! fixup! corrected spacings

--- a/landing-pages/site/assets/scss/_docs.scss
+++ b/landing-pages/site/assets/scss/_docs.scss
@@ -4539,6 +4539,7 @@
     line-height: 1.63;
     margin: 0 0 30px;
     font-size: 16px;
+    overflow-wrap: break-word;
   }
 
   h1 {
@@ -5768,7 +5769,8 @@
 
   .rst-content dl dt {
     font-weight: bold;
-    margin-bottom: 12px
+    margin-bottom: 12px;
+    word-break: break-word;
   }
 
   .rst-content dl p, .rst-content dl table, .rst-content dl ul, .rst-content dl ol {
@@ -5794,7 +5796,11 @@
     color: #51504f;
     border-top: solid 4px #68d1ff;
     padding: 12px 10px;
-    position: relative
+    position: relative;
+
+    @media (max-width: 768px) {
+      font-size: 10px;
+    }
   }
 
   .rst-content dl:not(.docutils) dt:before {
@@ -5923,6 +5929,9 @@
 
   .example-header--with-button {
     padding-right: 166px;
+    @media (max-width: 768px) {
+      padding-right: 100px
+    }
   }
 
   .example-header:after {
@@ -5937,6 +5946,11 @@
     margin-right: 16px;
     color: white;
     overflow-x: auto;
+
+    @media (max-width: 768px) {
+      overflow-wrap: initial;
+      font-size: 12px;
+    }
   }
 
   .example-header-button {
@@ -5968,6 +5982,11 @@
     transition: background-color .2s;
     vertical-align: middle;
     white-space: nowrap;
+
+    @media (max-width: 768px) {
+      font-size: 12px;
+      padding: 7px 0;
+    }
   }
 
   .viewcode-button:visited {
